--- a/views/index.jade
+++ b/views/index.jade
@@ -2,84 +2,82 @@ extends layout
 
 block content
   h1= title
-
   .row
     div(ng-sortable="config" class="col-md-2 height")
-      p.disabled 1-1
-      img(src="images/phoecologo.png")
+      img(ng-repeat="card in gameBoard[0][0]" src="{{card.url}}")
 
     div(ng-sortable="config" class="col-md-2 height")
-      p.disabled 1-2
+      img(ng-repeat="card in gameBoard[0][1]" src="{{card.url}}")
 
     div(ng-sortable="config" class="col-md-2 height")
-      p.disabled 1-3
+      img(ng-repeat="card in gameBoard[0][2]" src="{{card.url}}")
 
     div(ng-sortable="config" class="col-md-2 height")
-      p.disabled 1-4
+      img(ng-repeat="card in gameBoard[0][3]" src="{{card.url}}")
 
     div(ng-sortable="config" class="col-md-2 height")
-      p.disabled 1-5
-
-  .row
-    div(ng-sortable="config" class="col-md-2 height")
-      p.disabled 2-1
-
-    div(ng-sortable="config" class="col-md-2 height")
-      p.disabled 2-2
-
-    div(ng-sortable="config" class="col-md-2 height")
-      p.disabled 2-3
-
-    div(ng-sortable="config" class="col-md-2 height")
-      p.disabled 2-4
-
-    div(ng-sortable="config" class="col-md-2 height")
-      p.disabled 2-5
-
-  .row
-    div(ng-sortable="config" class="col-md-2 height")
-      p.disabled 3-1
-
-    div(ng-sortable="config" class="col-md-2 height")
-      p.disabled 3-2
-
-    div(ng-sortable="config" class="col-md-2 height")
-      p.disabled 3-3
-
-    div(ng-sortable="config" class="col-md-2 height")
-      p.disabled 3-4
-
-    div(ng-sortable="config" class="col-md-2 height")
-      p.disabled 3-5
-
-  .row
-    div(ng-sortable="config" class="col-md-2 height")
-      p.disabled 4-1
-
-    div(ng-sortable="config" class="col-md-2 height")
-      p.disabled 4-2
-
-    div(ng-sortable="config" class="col-md-2 height")
-      p.disabled 4-3
-
-    div(ng-sortable="config" class="col-md-2 height")
-      p.disabled 4-4
-
-    div(ng-sortable="config" class="col-md-2 height")
-      p.disabled 4-5
-
-  .row
-    div(ng-sortable="config" class="col-md-2 height")
-      p.disabled 5-1
-
-    div(ng-sortable="config" class="col-md-2 height")
-      p.disabled 5-2
-
-    div(ng-sortable="config" class="col-md-2 height")
-      p.disabled 5-3
-
-    div(ng-sortable="config" class="col-md-2 height")
-      p.disabled 5-4
-
-    div(ng-sortable="config" class="col-md-2 height")
-      p.disabled 5-5
+      img(ng-repeat="card in gameBoard[0][4]" src="{{card.url}}")
+  //
+  //.row
+  //  div(ng-sortable="config" class="col-md-2 height")
+  //    p.disabled 2-1
+  //
+  //  div(ng-sortable="config" class="col-md-2 height")
+  //    p.disabled 2-2
+  //
+  //  div(ng-sortable="config" class="col-md-2 height")
+  //    p.disabled 2-3
+  //
+  //  div(ng-sortable="config" class="col-md-2 height")
+  //    p.disabled 2-4
+  //
+  //  div(ng-sortable="config" class="col-md-2 height")
+  //    p.disabled 2-5
+  //
+  //.row
+  //  div(ng-sortable="config" class="col-md-2 height")
+  //    p.disabled 3-1
+  //
+  //  div(ng-sortable="config" class="col-md-2 height")
+  //    p.disabled 3-2
+  //
+  //  div(ng-sortable="config" class="col-md-2 height")
+  //    p.disabled 3-3
+  //
+  //  div(ng-sortable="config" class="col-md-2 height")
+  //    p.disabled 3-4
+  //
+  //  div(ng-sortable="config" class="col-md-2 height")
+  //    p.disabled 3-5
+  //
+  //.row
+  //  div(ng-sortable="config" class="col-md-2 height")
+  //    p.disabled 4-1
+  //
+  //  div(ng-sortable="config" class="col-md-2 height")
+  //    p.disabled 4-2
+  //
+  //  div(ng-sortable="config" class="col-md-2 height")
+  //    p.disabled 4-3
+  //
+  //  div(ng-sortable="config" class="col-md-2 height")
+  //    p.disabled 4-4
+  //
+  //  div(ng-sortable="config" class="col-md-2 height")
+  //    p.disabled 4-5
+  //
+  //.row
+  //  div(ng-sortable="config" class="col-md-2 height")
+  //    p.disabled 5-1
+  //
+  //  div(ng-sortable="config" class="col-md-2 height")
+  //    p.disabled 5-2
+  //
+  //  div(ng-sortable="config" class="col-md-2 height")
+  //    p.disabled 5-3
+  //
+  //  div(ng-sortable="config" class="col-md-2 height")
+  //    p.disabled 5-4
+  //
+  //  div(ng-sortable="config" class="col-md-2 height")
+  //    p.disabled 5-5
