Added Grunt to keep sortablejs from hijacking the app

--- a/views/home.jade
+++ b/views/home.jade
@@ -4,19 +4,19 @@ block content
   h1= title
   .row
     div(ng-sortable="config" class="col-md-2 height")
-      img(ng-repeat="card in gameBoard[0][0]" src="{{card.url}}")
+      img(class="img-responsive" ng-repeat="card in gameBoard[0][0]" src="{{card.url}}")
 
     div(ng-sortable="config" class="col-md-2 height")
-      img(ng-repeat="card in gameBoard[0][1]" src="{{card.url}}")
+      img(class="img-responsive" ng-repeat="card in gameBoard[0][1]" src="{{card.url}}")
 
     div(ng-sortable="config" class="col-md-2 height")
-      img(ng-repeat="card in gameBoard[0][2]" src="{{card.url}}")
+      img(class="img-responsive" ng-repeat="card in gameBoard[0][2]" src="{{card.url}}")
 
     div(ng-sortable="config" class="col-md-2 height")
-      img(ng-repeat="card in gameBoard[0][3]" src="{{card.url}}")
+      img(class="img-responsive" ng-repeat="card in gameBoard[0][3]" src="{{card.url}}")
 
     div(ng-sortable="config" class="col-md-2 height")
-      img(ng-repeat="card in gameBoard[0][4]" src="{{card.url}}")
+      img(class="img-responsive" ng-repeat="card in gameBoard[0][4]" src="{{card.url}}")
   //
   //.row
   //  div(ng-sortable="config" class="col-md-2 height")
