fix socket issue?

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,7 +7,7 @@ html(ng-app="spookyScarySkeleton")
     script(src='vendors/angular/angular.min.js')
     script(src='vendors/sortablejs/Sortable.js')
     script(src='vendors/sortablejs/ng-sortable.js')
-    script(src='vendors/socket.io-client/socket.io.js')
+    script(src='socket.io/socket.io.js')
     script(src='javascripts/client.js')
 
   body(ng-controller="sortable")
