Modularized controller, limited connectivity to two clients, only one client can control card

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,6 +9,7 @@ html(ng-app="spookyScarySkeleton")
     script(src='vendors/sortablejs/ng-sortable.js')
     script(src='socket.io/socket.io.js')
     script(src='javascripts/client.js')
+    script(src='javascripts/controllers/gameboard.js')
 
-  body(ng-controller="sortable")
+  body(ng-controller="game")
     block content
