--- a/views/home.jade
+++ b/views/home.jade
@@ -7,158 +7,14 @@ block content
   .playArea
 
     .board(ng-if="error != 0")
-
-      div(ng-repeat="row in gameBoardHeight")
-        div(ng-repeat="column in gameBoardWidth")
-          div(ng-sortable="config" class="col-{{row}}-{{column}} height top")
-            img(class="img-responsive" ng-repeat="card in gameBoard[row][column]" src="{{card.url}}")
+      -var row = 0;
+      -var column = 0;
+      p= height
+      while row < height
+        -column = 0;
+        while column < width
+          div(ng-sortable="config" class="col-#{row}-#{column} height")
+            img(class="img-responsive" ng-repeat="card in gameBoard[#{row}][#{column}]" src="{{card.url}}")
+          -column++
         .cf
-
-      //div(ng-sortable="config" class="column height top")
-      //  img(class="img-responsive" ng-repeat="card in gameBoard[0][0]" src="{{card.url}}")
-      //
-      //div(ng-sortable="config" class="column height top")
-      //  img(class="img-responsive" ng-repeat="card in gameBoard[0][1]" src="{{card.url}}")
-      //
-      //div(ng-sortable="config" class="column height top")
-      //  img(class="img-responsive" ng-repeat="card in gameBoard[0][2]" src="{{card.url}}")
-      //
-      //div(ng-sortable="config" class="column height top")
-      //  img(class="img-responsive" ng-repeat="card in gameBoard[0][3]" src="{{card.url}}")
-      //
-      //div(ng-sortable="config" class="column height top")
-      //  img(class="img-responsive" ng-repeat="card in gameBoard[0][4]" src="{{card.url}}")
-      //
-      //div(ng-sortable="config" class="column height top")
-      //  img(class="img-responsive" ng-repeat="card in gameBoard[0][5]" src="{{card.url}}")
-      //
-      //div(ng-sortable="config" class="column height top")
-      //  img(class="img-responsive" ng-repeat="card in gameBoard[0][6]" src="{{card.url}}")
-      //
-      //div(ng-sortable="config" class="column height top")
-      //  img(class="img-responsive" ng-repeat="card in gameBoard[0][7]" src="{{card.url}}")
-      //
-      //.cf
-      //div(ng-sortable="config" class="column height")
-      //  img(class="img-responsive" ng-repeat="card in gameBoard[1][0]" src="{{card.url}}")
-      //
-      //div(ng-sortable="config" class="column height")
-      //  img(class="img-responsive" ng-repeat="card in gameBoard[1][1]" src="{{card.url}}")
-      ////got tired of manually changing classes here
-      //div(ng-sortable="config" class="column height")
-      //  img(class="img-responsive" ng-repeat="card in gameBoard[1][2]" src="{{card.url}}")
-      //
-      //div(ng-sortable="config" class="column height")
-      //  img(class="img-responsive" ng-repeat="card in gameBoard[1][3]" src="{{card.url}}")
-      //
-      //div(ng-sortable="config" class="column height")
-      //  img(class="img-responsive" ng-repeat="card in gameBoard[1][4]" src="{{card.url}}")
-      //
-      //div(ng-sortable="config" class="column height")
-      //  img(class="img-responsive" ng-repeat="card in gameBoard[1][5]" src="{{card.url}}")
-      //
-      //div(ng-sortable="config" class="column height")
-      //  img(class="img-responsive" ng-repeat="card in gameBoard[1][6]" src="{{card.url}}")
-      //
-      //div(ng-sortable="config" class="column height")
-      //  img(class="img-responsive" ng-repeat="card in gameBoard[1][7]" src="{{card.url}}")
-      //
-      //.cf
-      //div(ng-sortable="config" class="column height")
-      //  img(class="img-responsive" ng-repeat="card in gameBoard[2][0]" src="{{card.url}}")
-      //
-      //div(ng-sortable="config" class="column height")
-      //  img(class="img-responsive" ng-repeat="card in gameBoard[2][1]" src="{{card.url}}")
-      //
-      //div(ng-sortable="config" class="column height")
-      //  img(class="img-responsive" ng-repeat="card in gameBoard[2][2]" src="{{card.url}}")
-      //
-      //div(ng-sortable="config" class="column height")
-      //  img(class="img-responsive" ng-repeat="card in gameBoard[2][3]" src="{{card.url}}")
-      //
-      //div(ng-sortable="config" class="column height")
-      //  img(class="img-responsive" ng-repeat="card in gameBoard[2][4]" src="{{card.url}}")
-      //
-      //div(ng-sortable="config" class="column height")
-      //  img(class="img-responsive" ng-repeat="card in gameBoard[2][5]" src="{{card.url}}")
-      //
-      //div(ng-sortable="config" class="column height")
-      //  img(class="img-responsive" ng-repeat="card in gameBoard[2][6]" src="{{card.url}}")
-      //
-      //div(ng-sortable="config" class="column height")
-      //  img(class="img-responsive" ng-repeat="card in gameBoard[2][7]" src="{{card.url}}")
-      //
-      //.cf
-      //div(ng-sortable="config" class="column height")
-      //  img(class="img-responsive" ng-repeat="card in gameBoard[3][0]" src="{{card.url}}")
-      //
-      //div(ng-sortable="config" class="column height")
-      //  img(class="img-responsive" ng-repeat="card in gameBoard[3][1]" src="{{card.url}}")
-      //
-      //div(ng-sortable="config" class="column height")
-      //  img(class="img-responsive" ng-repeat="card in gameBoard[3][2]" src="{{card.url}}")
-      //
-      //div(ng-sortable="config" class="column height")
-      //  img(class="img-responsive" ng-repeat="card in gameBoard[3][3]" src="{{card.url}}")
-      //
-      //div(ng-sortable="config" class="column height")
-      //  img(class="img-responsive" ng-repeat="card in gameBoard[3][4]" src="{{card.url}}")
-      //
-      //div(ng-sortable="config" class="column height")
-      //  img(class="img-responsive" ng-repeat="card in gameBoard[3][5]" src="{{card.url}}")
-      //
-      //div(ng-sortable="config" class="column height")
-      //  img(class="img-responsive" ng-repeat="card in gameBoard[3][6]" src="{{card.url}}")
-      //
-      //div(ng-sortable="config" class="column height")
-      //  img(class="img-responsive" ng-repeat="card in gameBoard[3][7]" src="{{card.url}}")
-      //
-      //.cf
-      //div(ng-sortable="config" class="column height")
-      //  img(class="img-responsive" ng-repeat="card in gameBoard[4][0]" src="{{card.url}}")
-      //
-      //div(ng-sortable="config" class="column height")
-      //  img(class="img-responsive" ng-repeat="card in gameBoard[4][1]" src="{{card.url}}")
-      //
-      //div(ng-sortable="config" class="column height")
-      //  img(class="img-responsive" ng-repeat="card in gameBoard[4][2]" src="{{card.url}}")
-      //
-      //div(ng-sortable="config" class="column height")
-      //  img(class="img-responsive" ng-repeat="card in gameBoard[4][3]" src="{{card.url}}")
-      //
-      //div(ng-sortable="config" class="column height")
-      //  img(class="img-responsive" ng-repeat="card in gameBoard[4][4]" src="{{card.url}}")
-      //
-      //div(ng-sortable="config" class="column height")
-      //  img(class="img-responsive" ng-repeat="card in gameBoard[4][5]" src="{{card.url}}")
-      //
-      //div(ng-sortable="config" class="column height")
-      //  img(class="img-responsive" ng-repeat="card in gameBoard[4][6]" src="{{card.url}}")
-      //
-      //div(ng-sortable="config" class="column height")
-      //  img(class="img-responsive" ng-repeat="card in gameBoard[4][7]" src="{{card.url}}")
-      //
-      //.cf
-      //div(ng-sortable="config" class="column height")
-      //  img(class="img-responsive" ng-repeat="card in gameBoard[5][0]" src="{{card.url}}")
-      //
-      //div(ng-sortable="config" class="column height")
-      //  img(class="img-responsive" ng-repeat="card in gameBoard[5][1]" src="{{card.url}}")
-      //
-      //div(ng-sortable="config" class="column height")
-      //  img(class="img-responsive" ng-repeat="card in gameBoard[5][2]" src="{{card.url}}")
-      //
-      //div(ng-sortable="config" class="column height")
-      //  img(class="img-responsive" ng-repeat="card in gameBoard[5][3]" src="{{card.url}}")
-      //
-      //div(ng-sortable="config" class="column height")
-      //  img(class="img-responsive" ng-repeat="card in gameBoard[5][4]" src="{{card.url}}")
-      //
-      //div(ng-sortable="config" class="column height")
-      //  img(class="img-responsive" ng-repeat="card in gameBoard[5][5]" src="{{card.url}}")
-      //
-      //div(ng-sortable="config" class="column height")
-      //  img(class="img-responsive" ng-repeat="card in gameBoard[5][6]" src="{{card.url}}")
-      //
-      //div(ng-sortable="config" class="column height")
-      //  img(class="img-responsive" ng-repeat="card in gameBoard[5][7]" src="{{card.url}}")
+        -row++
