comments added, some may be incomprehensible

--- a/views/home.jade
+++ b/views/home.jade
@@ -7,14 +7,25 @@ block content
   .playArea(ng-if="error != 0")
 
     .board
+      //height and width are passed to the template in home.js route
+        while loops produce the 48 divs that make up the gameboard
       -var row = 0;
       -var column = 0;
       while row < height
         -column = 0;
         while column < width
+          //unique classes needed for fitting grid to the gameboard image
           div(ng-sortable="config" class="col-#{row}-#{column} height")
+            //ng-sortable(sortable.js) works by hiding an element when the corresponding array is empty
+              gameBoard is an array of arrays (AoA), all of which are empty except when occupied by a "card,"
+              this card is an array with one member: an object with the property 'url.' Each index of
+              the AoA needs a div for the card to be dragged into, which needs to reference
+              the right index in the AoA. Hence the need for the jade templating within the "ng-repeat"
             img(class="img-responsive" ng-repeat="card in gameBoard[#{row}][#{column}]" src="{{card.url}}")
           -column++
         .cf
         -row++
 
+    .other
+      p(ng-model="command")
+      p(ng-model="mana")
