--- a/views/home.jade
+++ b/views/home.jade
@@ -27,5 +27,5 @@ block content
         -row++
 
     .other
-      p(ng-model="command")
-      p(ng-model="mana")
+      p(ng-model="command" class="command")
+      p(ng-model="mana" class="mana")
