--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,14 +2,17 @@ doctype html
 html(ng-app="spookyScarySkeleton")
   head
     title= title
-    link(rel='stylesheet', href='vendors/bootstrap/dist/css/bootstrap.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='vendors/bootstrap/dist/css/bootstrap.css')
     script(src='vendors/angular/angular.min.js')
     script(src='vendors/sortablejs/Sortable.js')
     script(src='vendors/sortablejs/ng-sortable.js')
     script(src='socket.io/socket.io.js')
     script(src='javascripts/client.js')
     script(src='javascripts/controllers/gameboard.js')
+    script(src='javascripts/controllers/players.js')
+    script(src='javascripts/services/resources.js')
+    script(src='javascripts/services/socket.js')
 
   body(ng-controller="game")
     block content
