Bug fixed, cards now expand on mouseover, comments added where missing, still stumped on how to limit playing cards to the homerow from the hand

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -40,11 +40,15 @@ body {
 
 img {
   width: 109px;
-  transition: width .5s 1s;
+  position: relative;
+  transition: all .5s 1s;
+  z-index: 10;
 }
 
 img:hover {
+  position: relative;
   width: 350px;
+  z-index: 900;
 }
 
 p {
