started commenting code, rearranged hand/resources to below gameboard

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -55,16 +55,22 @@ p {
   font-size: 30px;
 }
 
+.hand {
+  float: left;
+}
+
 .life {
   color: red;
 }
 
 .command {
-  color: gold;;
+  color: gold;
+  float: left;
 }
 
 .mana {
   color: dodgerblue;
+  float: left;
 }
 
 .playable {
