--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,9 @@ html(ng-app="spookyScarySkeleton")
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(src='vendors/angular/angular.min.js')
+    script(src='vendors/angular-aria/angular-aria.min.js')
+    script(src='vendors/angular-animate/angular-animate.min.js')
+    script(src='vendors/angular-material/angular-material.min.js')
     script(src='vendors/sortablejs/Sortable.js')
     script(src='vendors/sortablejs/ng-sortable.js')
     script(src='socket.io/socket.io.js')
