--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -59,9 +59,7 @@ p {
   float: left;
 }
 
-.life {
-  color: red;
-}
+
 
 .command {
   color: gold;
@@ -71,6 +69,11 @@ p {
 .mana {
   color: dodgerblue;
   float: left;
+}
+
+.life {
+  float: left;
+  color: red;
 }
 
 .playable {
